Fix icons on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,11 @@ a {
 
 .credits-icon {
   margin-right: 40px;
+  max-width: 25%;
+}
+
+.credits-icon img {
+  max-width: 100%;
 }
 
 .bac-icon-container {
